# ctmm

./: .readthedocs.yml  CMakeLists.txt  README.md
doc/: .buildinfo  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
doc/_sources/: index.rst.txt  introduction.rst.txt
doc/_sources/api_doc/: api.rst.txt  ctmm.rst.txt
doc/_sources/python/: introduction.rst.txt  python_index.rst.txt
doc/_sources/usage/: getting_started.rst.txt  installation.rst.txt
doc/_static/: documentation_options.js
doc/api_doc/: api.html  ctmm.html  ctmm_internal.html  ctmm_mathematical.html
doc/python/: introduction.html  python_index.html
doc/source/: conf.py  introduction.rst  requirements.txt
doc/source/api_doc/: ctmm_internal.rst  ctmm_mathematical.rst
doc/source/usage/: installation.rst
doc/usage/: getting_started.html  installation.html
doc/xml/: DLL__defines_8h.xml  ctmm_8c.xml  ctmm_8h.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  structctmm__complex.xml  structctmm__matrix.xml  structctmm__stack.xml
include/: ctmm.h
python/: manylinux_build.sh  pyctmmmodule.c  setup.py  test_pyctmm.py  test_pyctmm_metal.py
python/include/: DLL_defines.h
python/pyctmm/: __init__.py
src/: CMakeLists.txt  ctmm.c
tests/: CMakeLists.txt  ctmm_fresnel_test.c  ctmm_mathematics_test.c  ctmm_test.c
